# eyes.sdk.javascript1

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  package-lock.json  pending-changes.yaml  release-please-config.json
.github/scripts/: arm64-bundle-resouces.sh
.github/workflows/: changelog.yml  ci.yml  dotnet-platform-tests.yml  dotnet-publish.yml  dotnet-tests.yml  pre-commit.yml  publish-bongo.yml  publish-browser-extension-eyes.yml  publish-browser-extension-screenshot.yml  publish-core-base.yml  publish-core.yml  publish-coverage-tests.yml  publish-cypress.yml  publish-ec-client.yml  publish-eyes.yml  publish-images.yml  publish-java.yml  publish-nightwatch.yml  publish-playwright.yml  publish-protractor.yml  publish-puppeteer.yml  publish-req.yml  publish-screenshoter.yml  publish-selenium.yml  publish-socket.yml  publish-spec-browser-extension.yml  publish-spec-playwright.yml  publish-spec-puppeteer.yml  publish-spec-selenium.yml  publish-spec-webdriver.yml  publish-spec-webdriverio.yml  publish-storybook.yml  publish-testcafe.yml  publish-tunnel-client.yml  publish-universal.yml  publish-webdriverio.yml  publish.yml  py-publish.yaml  py-tests.yaml  release-fake.yml  (+6 more)
dotnet/: .gitignore  CHANGELOG.md  Eyes.Sdk.DotNet.sln  Eyes.Sdk.DotNet_Minimal.sln  Eyes.Sdk.DotNet_Relevant.sln  Eyes.Sdk.DotNet_Travis.sln  Eyes.Sdk.DotNet_Travis.sln.DotSettings  NEW_TAGS.txt  deploy.ps1  deploy.sh  download_core_linux.sh  download_cores.ps1  genericTests_appium.sh  genericTests_appium2.sh  genericTests_images.sh  genericTests_playwright.ps1  genericTests_playwright.sh  genericTests_selenium3.sh  genericTests_selenium4.sh  initChromeDriver.sh  initGeckoDriver.sh  install_pwsh.sh  reportTestResult.sh  run_crossplatform_tests.ps1  sendFullCoverageReport.sh  sendMail.sh  tag.sh  updateChangelogAndProjectFiles.py  update_core_versions.ps1  update_test.ps1  update_versions.ps1
dotnet/Eyes.Appium.DotNet/: AppiumEyesRunner.cs  CHANGELOG.md  Eyes.Appium.DotNet.csproj  Eyes.cs
dotnet/Eyes.Appium2.DotNet/: AppiumSelectorTransformer.cs  CHANGELOG.md  ClassicRunner.cs  Eyes.Appium2.DotNet.csproj  Eyes.cs
dotnet/Eyes.Image.Core.DotNet/: CHANGELOG.md  Eyes.Image.Core.DotNet.csproj  OperatingSystemChecker.cs  UniversalSdkNativeLoader.cs
dotnet/Eyes.Image.Core.DotNet.Linux.Alpine/: Eyes.Image.Core.DotNet.Linux.Alpine.csproj  UniversalSdkNativeLoader.cs
dotnet/Eyes.Image.Core.DotNet.Linux.Arm64/: Eyes.Image.Core.DotNet.Linux.Arm64.csproj  UniversalSdkNativeLoader.cs
dotnet/Eyes.Image.Core.DotNet.Linux.X64/: Eyes.Image.Core.DotNet.Linux.X64.csproj  UniversalSdkNativeLoader.cs
dotnet/Eyes.Image.Core.DotNet.OSX/: CommadExecutor.cs  Eyes.Image.Core.DotNet.OSX.csproj  UniversalSdkNativeLoader.cs
dotnet/Eyes.Image.Core.DotNet.Windows/: Eyes.Image.Core.DotNet.Windows.csproj  UniversalSdkNativeLoader.cs
dotnet/Eyes.Images.DotNet/: BatchInfo.cs  CHANGELOG.md  Configuration.cs  DensityMetrics.cs  Eyes.Images.DotNet.csproj  EyesBase.cs  EyesBaseConfig.cs  IConfiguration.cs  IRenderBrowserInfo.cs  IServerConnector.cs  ImageMatchSettings.cs  MapProfiler.cs  PropertiesCollection.cs  PropertyData.cs  ProxySettings.cs  StitchOverlap.cs  TestResultContainer.cs  TestResults.cs  TestResultsSummary.cs
dotnet/Eyes.Playwright.DotNet/: CHANGELOG.md  ClassicRunner.cs  Eyes.Playwright.DotNet.csproj  Eyes.cs  IOcrRegionTransformer.cs  PlaywrightEyesRunner.cs  README.md
dotnet/Eyes.Selenium.DotNet/: CHANGELOG.md  ClassicRunner.cs  ContextBasedScaleProvider.cs  Eyes.Selenium.DotNet.csproj  Eyes.cs
dotnet/Eyes.Selenium4.DotNet/: CHANGELOG.md  ClassicRunner.cs  Cookie.cs  Eyes.SelectorTransformer.cs  Eyes.Selenium4.DotNet.csproj  Eyes.cs  IOcrRegionTransformer.cs  ISelectorTransformer.cs  OcrRegionTransformer.cs  SeleniumEyesRunner.cs
dotnet/Tests/: ReportingTestSuite.common.cs  SkipAttribute.common.cs  TestUtils.common.cs
dotnet/coverage-tests/: package-lock.json  package.json
java/: .gitattributes  .gitignore  CHANGELOG.md  README.md  create_json.py  initChromeDriver.sh  initGeckoDriver.sh  pom.xml  sendMail.sh  sendTestResults.sh  send_full_regression_mail.sh
java/coverage-tests/: docker-compose.yaml  genericTestsSuite.xml  generic_tests.sh  package.json  pom.xml
java/eyes.sdk.core/: pom.xml  (+5 more)
js/: .eslintrc  .gitignore  .prettierrc  .yarnrc.yml  commitlint.config.js  package.json  tsconfig.base.json  wp.md
python/: .gitignore  Makefile
python/core_universal/: .bumpversion.cfg  CHANGELOG.md  README.rst  setup.cfg  setup.py
python/core_universal/applitools/core_universal/: __init__.py
python/eyes_common/: .bumpversion.cfg  CHANGELOG.md  README.rst  setup.cfg
python/eyes_common/applitools/common/: __init__.py  __version__.py  schema.py  schema_fields.py
python/eyes_images/: .bumpversion.cfg  CHANGELOG.md  README.rst  setup.cfg  setup.py
python/eyes_images/applitools/common/: __version__.py  schema.py
python/eyes_images/applitools/common/fluent/: web_check_settings.py
python/eyes_images/applitools/common/ultrafastgrid/: config.py
python/eyes_images/applitools/images/: __init__.py  eyes.py  fluent.py
python/eyes_images/applitools/selenium/: command_executor.py  eyes.py  schema.py  schema_fields.py
python/eyes_playwright/: .bumpversion.cfg  CHANGELOG.md  setup.cfg
python/eyes_playwright/applitools/playwright/: __init__.py
python/eyes_selenium/: .bumpversion.cfg  CHANGELOG.md  README.rst  setup.cfg
python/eyes_selenium/applitools/selenium/: __init__.py
ruby/: .gitignore  .rubocop.yml  .travis.pending.yml  .travis.yml  CHANGELOG.md  Gemfile  GemfileGithub  GemfileTravis  GemfileTravisCapybara  LICENSE.md  README.md  Rakefile  UUIDFromString.java  all_tests_report.sh  browser_stack_upload.sh  docker-compose.yaml  eyes_appium.gemspec  eyes_calabash.gemspec  eyes_capybara.gemspec  eyes_core.gemspec  eyes_images.gemspec  eyes_selenium.gemspec  eyes_universal.gemspec  generic_tests.sh  initChromeDriver.sh  initGeckoDriver.sh  package.json  pending_tests.yml  sendMail.sh  test_utils.gemspec
scripts/: download-core-bin.sh  production-changelog.mjs
(+1605 files in other folders)
