[bdist_wheel]
universal = True

[metadata]
author = Applitools Team
author_email = team@applitools.com
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
description = Applitools Eyes Core SDK Server
license = Applitools SDK License
license_files = LICENSE
long_description = file: README.rst
name = core-universal
platforms = Linux, MacOS, Windows
project_urls =
	Source=https://github.com/applitools/eyes.sdk.javascript1/tree/master/js/packages/core
url = http://www.applitools.com
version = 3.8.0

[options]
packages = find:
python_requires = >=2.7, <4
zip_safe = False
