[bdist_wheel]
universal = True

[metadata]
author = Applitools Team
author_email = team@applitools.com
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
description = Applitools Python SDK. Common code package
keywords = applitools, eyes, eyes_images, eyes_selenium, eyes_playwright
license = Applitools SDK License
license_files = LICENSE
long_description = file: README.rst
name = eyes-common
platforms = Linux, MacOS, Windows
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_common
url = http://www.applitools.com
version = 5.21.3

[options]
install_requires =
	attrs>=19.2.0,<23
	core-universal==3.10.1
	enum34<2               ;python_version<'3.4'
	marshmallow<3
	six
	typing<4               ;python_version<'3.5'
	websocket-client<=0.59
packages = find:
python_requires = >=2.7, <4

[options.package_data]
* = py.typed
