[bdist_wheel]
universal = True

[metadata]
author = Applitools Team
author_email = team@applitools.com
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
description = Applitools Python SDK. Images package
keywords = applitools, eyes
license = Applitools SDK License
license_files = LICENSE
long_description = file: README.rst
name = eyes-images
platforms = Linux, MacOS, Windows
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_images
url = http://www.applitools.com
version = 5.20.4

[options]
install_requires =
	eyes-common==5.21.3
packages = find:
python_requires = >=2.7, <4

[options.package_data]
* = py.typed
