[metadata]
name = eyes-playwright
version = 5.16.0
description = Applitools Python SDK. Playwright package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
license = Applitools SDK License
license_files = LICENSE
platforms = Linux, MacOS, Windows
keywords = applitools, eyes, eyes_selenium
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_images

[options]
install_requires =
	eyes-images==5.16.0
	playwright>=1,<2
python_requires = >=3.7,<4
