[metadata]
author = Applitools Team
author_email = team@applitools.com
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
description = Applitools Python SDK. Playwright package
keywords = applitools, eyes, eyes_selenium
license = Applitools SDK License
license_files = LICENSE
long_description = file: README.rst
name = eyes-playwright
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_images
platforms = Linux, MacOS, Windows
url = http://www.applitools.com
version = 5.20.0

[options]
install_requires =
	eyes-common==5.20.0
	playwright>=1,<2
packages = find:
python_requires = >=3.7,<4
