[bdist_wheel]
universal = True

[metadata]
author = Applitools Team
author_email = team@applitools.com
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
description = Applitools Python SDK. Selenium package
keywords = applitools, eyes, eyes_selenium
license = Applitools SDK License
license_files = LICENSE
long_description = file: README.rst
name = eyes-selenium
project_urls =
	Source = https://github.com/applitools/eyes.sdk.javascript1/tree/master/python/eyes_images
platforms = Linux, MacOS, Windows
url = http://www.applitools.com
version = 5.20.1

[options]
packages = find:
install_requires =
	Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
	Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
	Appium-Python-Client<3          ;python_version>='3.7'
	eyes-common==5.21.0
	selenium<5
python_requires = >=2.7,<4
